# xray_report_gen

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: base.yaml
scripts/: prepare_manifests.py  validate_data.py
src/xray_pipeline/core/: config.py  data_reader.py  env.py  io.py  schema.py
src/xray_pipeline/evaluation/: evaluate.py  setup_resources.py
src/xray_pipeline/scripts/: __init__.py  prepare_manifests.py  validate_data.py
src/xray_pipeline/training/: dataset.py  inference.py  train.py
tests/: test_basic.py  test_config.py  test_data_reader.py  test_dataset.py  test_inference.py  test_io.py  test_schema.py
