[project]
name = "xray-report-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0"
]

training = [
    "torch>=2.0.0",
    "Pillow>=10.0",
    "transformers>=4.45.0",
    "unsloth>=2024.8",
    "trl>=0.11.0",
    "peft>=0.12.0",
    "mlflow>=2.14.0",
    "accelerate>=0.34.0"
]

evaluation = [

]